test/parsing/ferguson/reserved-single.chpl
var single = 0;

proc f(single) {
}

class single {
  var single =0;
}

type single = real;

proc single() {
}

proc test() {
  try {
  } catch single {
  }
}
